# optimization-f24

./: README.md  pyproject.toml  requirements.txt  setup_precommit.sh  solution.ipynb
data/: dikin_multiple.csv  dikin_single.csv
report/: main.tex
